--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,16 +14,18 @@ dependencies:
   firebase_core: ^2.22.0
   firebase_ui_auth: ^1.10.0
   photo_view: ^0.14.0
-  image_picker: ^0.8.4+4
+  image_picker: ^0.8.4
   firebase_storage: ^11.5.3
   image_field: ^0.0.5
+  tflite_v2: ^1.0.0
+
 
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 flutter:
   uses-material-design: true
